<resources>
    <string name="app_name">Магазин продуктов</string>
    <string name="menu_exit">Выход</string>
    <string name="btn_create">Создать магазин</string>
    <string name="et_name">Название продукта</string>
    <string name="et_price">Цена</string>
    <string name="btn_submit">Добавить</string>
    <string name="et_description">Краткое описание</string>
    <string name="tv_name">Название:</string>
    <string name="tv_price">Цена (руб.):</string>
    <string name="tv_description">Описание:</string>
    <string name="menu_back">Назад</string>
    <string name="btn_save">Сохранить</string>
</resources>